--- a/src/scss/components/paragraphs/_gallery.scss
+++ b/src/scss/components/paragraphs/_gallery.scss
@@ -1,14 +1,131 @@
+$arrow-container-height: 48px;
+
 .gallery {
+  .media--image__caption {
+    padding-left: 0;
+    padding-right: 0;
+
+    @include breakpoint($breakpoint-m) {
+      @include font-size(14px, 18px);
+    }
+
+    @include breakpoint($breakpoint-l) {
+      @include font-size(20px, 32px);
+    }
+  }
+}
+
+.gallery__main {
+  padding-bottom: $arrow-container-height + $spacing-half;
+
+  @include breakpoint($breakpoint-m) {
+    padding-bottom: $arrow-container-height + $spacing-double;
+  }
+
+  @include breakpoint($breakpoint-l) {
+    padding-bottom: 0;
+  }
+
+  .gallery__slides {
+    margin: 0 auto;
+
+    @include breakpoint($breakpoint-l) {
+      max-width: 83%;
+    }
+  }
+}
+
+.gallery__thumbnails {
+  display: none;
+
+  @include breakpoint($breakpoint-l) {
+    display: block;
+    margin: 0;
+  }
+
   .gallery__thumbnails__list {
     display: flex;
+    flex-wrap: nowrap;
     list-style: none;
+    margin: $spacing-quadruple 0 0;
+    padding: 0;
 
     .gallery__thumbnails__item {
+      height: 180px;
       line-height: 0;
+      margin: $spacing-quarter 0;
+      width: 180px;
 
       picture, img {
+        border: $spacing-quarter solid $color-white;
+        display: block;
         line-height: 0;
+        width: 100%;
+      }
+
+      &.is-active img {
+        border: $spacing-quarter solid $hdbt-color-black;
       }
     }
   }
+}
+
+// Splide library styling
+.splide__arrows {
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  left: 0;
+  padding-top: 0;
+  position: absolute;
+  right: 0;
+
+  @include breakpoint($breakpoint-l) {
+    bottom: auto;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .splide__arrow {
+    background-color: transparent;
+    border: 0 none;
+    display: block;
+    height: $arrow-container-height;
+    margin: 0;
+    padding: 0;
+    width: $arrow-container-height;
+
+    @include breakpoint($breakpoint-l) {
+      height: 64px;
+      width: 64px;
+    }
+
+    @include breakpoint($breakpoint-xl) {
+      height: 96px;
+      width: 96px;
+    }
+
+    &[disabled] {
+      opacity: 0.5;
+    }
+
+    svg {
+      display: none;
+    }
+
+    &.splide__arrow--prev {
+      background-image: url('../icons/hds/ui/arrow-left.svg');
+      margin-left: -$spacing-half;
+    }
+
+    &.splide__arrow--next {
+      background-image: url('../icons/hds/ui/arrow-right.svg');
+      margin-right: -$spacing-half;
+    }
+  }
+}
+
+// Tiny-slider overrides {
+.tns-controls {
+
 }
