Added mmenu library and settings for it.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,10 @@
 // This file includes all imports
 //
 
+// Load fonts first to prevent
+@import "library/variables/_typography.*";
+@import "library/fonts/*.*";
+
 @import "~breakpoint-sass";
 
 @import "hds";
