--- a/templates/paragraphs/paragraph--gallery.html.twig
+++ b/templates/paragraphs/paragraph--gallery.html.twig
@@ -56,6 +56,7 @@
             </ul>
           </div>
         </div>
+        <div class="gallery__slide-count"></div>
         <div class="gallery__thumbnails js-gallery__thumbnails">
           <ul class="gallery__thumbnails__list">
             {% for key, image in gallery_slide_thumbnails %}
