UHF-201 Commented on the gallery settings javascript, added spacing on the gallery top

--- a/src/scss/components/paragraphs/_gallery.scss
+++ b/src/scss/components/paragraphs/_gallery.scss
@@ -1,7 +1,12 @@
 $arrow-container-height: 48px;
 
 .gallery {
+  margin-top: $spacing-triple;
   position: relative;
+
+  @include breakpoint($breakpoint-l) {
+    margin-top: $spacing-quadruple;
+  }
 
   .media--image__caption {
     padding-left: 0;
