UHF-201 Center the thumbnails when there is less than 6 of them

--- a/src/scss/components/paragraphs/_gallery.scss
+++ b/src/scss/components/paragraphs/_gallery.scss
@@ -161,6 +161,17 @@ $arrow-container-height: 48px;
   position: relative;
 }
 
+.tns-disabled {
+  .tns-controls {
+    display: none;
+  }
+
+  .tns-inner {
+    display: flex;
+    justify-content: center;
+  }
+}
+
 .tns-controls {
   button {
     background-color: rgba($color-white,0.8);
