--- a/src/scss/components/content/_quoted.scss
+++ b/src/scss/components/content/_quoted.scss
@@ -14,8 +14,7 @@
     }
   }
   .quote__author {
-    @include font-size(18px);
-    line-height: $lineheight-l;
+    @include font-size(18px, $lineheight-l);
     margin-top: $spacing-and-half;
 
     &::before {
