--- a/src/scss/_hds.scss
+++ b/src/scss/_hds.scss
@@ -3,9 +3,9 @@
 // This file includes Helsinki Design System core packages.
 //
 
-@import "~hds-core/lib/icons/icon.css";
-@import "~hds-core/lib/icons/all.css";
-@import "~hds-core/lib/base.css";
-@import "~hds-core/lib/utils/animations.css";
-@import "~hds-core/lib/utils/helpers.css";
-@import "~hds-core/lib/components/all.css";
+@import "~hds-core/lib/icons/icon.min.css";
+@import "~hds-core/lib/icons/all.min.css";
+@import "~hds-core/lib/base.min.css";
+@import "~hds-core/lib/utils/animations.min.css";
+@import "~hds-core/lib/utils/helpers.min.css";
+@import "~hds-core/lib/components/all.min.css";
