Fixed link issue in list of links paragraph.

--- a/templates/paragraphs/paragraph--list-of-links-item.html.twig
+++ b/templates/paragraphs/paragraph--list-of-links-item.html.twig
@@ -53,7 +53,7 @@
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
 
-    <a href="{{ link }}" class="list-of-links__item__link">
+    <a href="{{ url }}" class="list-of-links__item__link">
       {% if list_of_links_design == 'with-image' %}
         {% if image.0 %}
           <div class="list-of-links__item__image">
