--- a/src/scss/components/paragraphs/_columns.scss
+++ b/src/scss/components/paragraphs/_columns.scss
@@ -73,4 +73,25 @@
     }
   }
 
+  // Overrides for image paragraph styles.
+  .image {
+    .image__container {
+      padding: 0;
+
+      @include breakpoint($breakpoint-m) {
+        padding: 0;
+      }
+
+      @include breakpoint($breakpoint-l) {
+        padding: 0;
+      }
+
+      .media--image__caption {
+        @include breakpoint($breakpoint-m) {
+          @include font-size(14px, 24px);
+        }
+      }
+    }
+  }
+
 }
