--- a/src/scss/components/paragraphs/_hero.scss
+++ b/src/scss/components/paragraphs/_hero.scss
@@ -35,7 +35,7 @@ $koro-height: 50px;
       @include font-size(16px, $lineheight-xxl);
     }
 
-    a {
+    a:not(.hds-button) {
       color: currentColor;
     }
   }
