--- a/src/scss/components/misc/_eu-cookie-compliance-banner.scss
+++ b/src/scss/components/misc/_eu-cookie-compliance-banner.scss
@@ -84,10 +84,8 @@ body {
     width: auto;
   }
 
-  .eu-cookie-compliance-buttons {
-    float: none;
+  .eu-cookie-compliance-categories-buttons {
     margin-top: $spacing;
-    max-width: 100%;
 
     @include breakpoint($breakpoint-m) {
       margin-left: $spacing;
@@ -95,7 +93,13 @@ body {
     }
   }
 
+  .eu-cookie-compliance-buttons {
+    float: none;
+    max-width: 100%;
+  }
+
   .hds-button {
+    max-width: 400px;
     width: 100%;
 
     &.hds-button--primary {
