UHF-402 Set max-width for the texts in the banner

--- a/src/scss/components/misc/_eu-cookie-compliance-banner.scss
+++ b/src/scss/components/misc/_eu-cookie-compliance-banner.scss
@@ -48,6 +48,11 @@ body {
     > h2 {
       @include font-size(24px, 29px);
       margin-top: 0;
+      max-width: $content-width-max;
+    }
+
+    > p {
+      max-width: $content-width-max;
     }
   }
 
