--- a/templates/paragraphs/paragraph--liftup-with-image.html.twig
+++ b/templates/paragraphs/paragraph--liftup-with-image.html.twig
@@ -46,7 +46,7 @@
     view_mode ? 'liftup-with-image--' ~ view_mode|clean_class,
     not paragraph.isPublished() ? 'liftup-with-image--unpublished',
     'liftup-with-image--design-' ~ design,
-    'banner--color-' ~ theme_color
+    'liftup-with-image--color-' ~ theme_color
   ]
 %}
 
