--- a/src/scss/components/paragraphs/_hero.scss
+++ b/src/scss/components/paragraphs/_hero.scss
@@ -27,7 +27,7 @@ $koro-height: 50px;
   }
 
   .hero__cta {
-    display: flex;
+    display: inline-flex;
     flex-flow: column;
     margin-top: $spacing-double;
 
@@ -37,10 +37,18 @@ $koro-height: 50px;
     }
 
     .hero__button {
-      margin: $spacing-half 0 0;
+      margin: $spacing 0 0;
 
       @include breakpoint($breakpoint-s) {
-        margin: $spacing-half $spacing-half 0;
+        margin: 0 $spacing-half 0;
+      }
+
+      &:first-child {
+        margin-top: 0;
+
+        @include breakpoint($breakpoint-s) {
+          margin-top: 0;
+        }
       }
     }
   }
