UHF-252 Fix full color button text color issue

--- a/src/scss/components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/components/paragraphs/_liftup-with-image.scss
@@ -49,7 +49,7 @@
       color: var(--hdbt-text-color--#{$color});
 
       a {
-        color: var(--hdbt-text-color--#{$color});
+        --hdbt-default-link-color: var(--hdbt-text-color--#{$color});
       }
 
       .hds-button--primary {
