--- a/src/scss/components/paragraphs/_banner.scss
+++ b/src/scss/components/paragraphs/_banner.scss
@@ -83,7 +83,7 @@ $colors: coat-of-arms, brick, bus, metro, tram, gold, silver, copper, engel, fog
     color: var(--hdbt-text-color--#{$color});
 
     a {
-      color: var(--hdbt-text-color--#{$color});
+      --hdbt-default-link-color: var(--hdbt-text-color--#{$color});
     }
 
     .hds-button--primary {
