UHF-252 Fix background image version full bg button color

--- a/src/scss/components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/components/paragraphs/_liftup-with-image.scss
@@ -228,7 +228,7 @@
   }
 
   a {
-    color: var(--hdbt-color-black);
+    --hdbt-default-link-color: var(--color-white);
   }
 
   .hds-button--primary {
