--- a/templates/misc/koro.twig
+++ b/templates/misc/koro.twig
@@ -1,7 +1,7 @@
 {% if not koro %}
   {% set koro = 'basic' %}
 {% endif %}
-{% set koros = ['basic', 'beat', 'pulse', 'vibration', 'wave', 'wave--negative', 'calm'] %}
+{% set koros = ['basic', 'beat', 'pulse', 'vibration', 'wave', 'calm'] %}
 {% set koro_path = '@hdbt/misc/koros/koro-' ~ koro ~ '.twig' %}
 
 <div
