--- a/templates/misc/koros/koro-wave.twig
+++ b/templates/misc/koros/koro-wave.twig
@@ -1,8 +1,8 @@
 {% set korosId = 'koros' ~ random() %}
 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="100%" height="50" fill="currentColor">
   <defs>
-    <pattern id="{{ korosId }}" x="0" y="0" width="67" height="50" patternUnits="userSpaceOnUse">
-      <path d="M33.49,23.34C27.94,9.64,15.06,0,0,0H0V50H67V.1C52,.08,39.07,9.65,33.49,23.34Z"/>
+    <pattern id="{{ korosId }}" x="0" y="0" width="67" height="51" patternUnits="userSpaceOnUse">
+      <path class="cls-1" d="M67,50V23.39h0c-15,0-27.91-9.64-33.46-23.34C27.93,13.73,15,23.31,0,23.29V50Z"/>
     </pattern>
   </defs>
   <rect fill="url(#{{ korosId }})" width="100%" height="50" />
