--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -72,7 +72,7 @@
   {% endif %}
 
   <footer role="contentinfo" class="footer {{ footer_variant }}">
-    {% include '@hdbt/misc/koro.twig' with {koro: koro, flip: true } %}
+    {% include '@hdbt/misc/koro.twig' with {koro: koro, flip: false } %}
     {% if page.footer_top %}
       {{ page.footer_top }}
     {% endif %}
