UHF-899 Add font-smoothing for body to have the font slightly lighter. The problems with this approach are acknowledged but we will proceed with this for now.

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -13,11 +13,14 @@ html {
 }
 
 body {
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
   background-color: $body-bg-color;
   display: flex;
   flex-direction: column;
   font-family: $base-font-family;
   line-height: $lineheight-l;
+
 
   &.gin--horizontal-toolbar {
     // Move toolbar paddings to dialog-off-canvas.
